# Ripl

./: .gitmodules  CMakeLists.txt  Makefile  build.sh  lua_ripl_bindings.h  main.c  notes  out  song.lua  state.h
example/: song.lua
src/: audio.h  graph.c  graph.h  lua_snd_bindings.h  main.c  main.cc  midi.h  mixer.c  mixer.h  mixer_channel.c  mixer_channel.h  module.c  module.h  node.c  node.h  notes  ripl.c  ripl.h  state.c  state.h
src/backend/: backend.c  backend.h
src/dsp/: dummy.c  dummy.h  osc.c  osc.h  synth.c  synth.h
src/graph/: graph.c  graph.h  node.c  node.h
src/graph/dummy/: dummy.c  dummy.h
src/graph/osc/: osc.c  osc.h
src/graph/synth/: synth.c  synth.h
src/modules/: module.c  module.h  synth.c  synth.h
src/nodes/: node.c  node.h  synth.c  synth.h
src/old/: lua_snd_bindings.h
src/processors/: dummy.c  dummy.h  mixer.c  mixer.h  osc.c  osc.h  processor.c  processor.h
src/processors/dummy/: dummy.c  dummy.h
src/processors/osc/: osc.c  osc.h
src/snd/: CMakeLists.txt  audio.h  graph.c  graph.h  midi.h  node.c  node.h  snd.c  snd.h
src/snd/backend/: backend.c  backend.h
src/snd/dsp/: dummy.c  dummy.h  osc.c  osc.h
src/snd/processors/: dummy.c  dummy.h  mixer.c  mixer.h  osc.c  osc.h  processor.c  processor.h
